--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,13 @@
       "src": "api/index.js",
       "use": "@vercel/node"
     }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "api/index.js"
+    }
   ]
+  }
   
-}
+
